refactor: change autor.html

--- a/public/about/author.html
+++ b/public/about/author.html
@@ -7,8 +7,8 @@
   <body>
 		<h1>Об авторе</h1>
 
-			<p>Проект выполнил студет школы Thinknetica
-				<a href='https://github.com/s-lexx' target="_blank" rel=nofollow rel=noopener>Алексей Сибирцев.</a>
+			<p>Проект выполнил студет школы Thinknetica<a href='https://github.com/s-lexx'
+			   target="_blank" rel=nofollow rel=noopener>Алексей Сибирцев.</a>
 			</p>
   </body>
 </html>
